...
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/hint_title"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

...
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_content"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNoteContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:inputType="textCapSentences|textMultiLine"
            android:minLines="2"
            android:maxLines="4" />
...
